zellij-utils/src/snapshots/zellij_utils__setup__setup_test__default_config_with_no_cli_arguments-2.snap
---
source: zellij-utils/src/setup.rs
expression: "format!(\"{:#?}\", layout_info)"
---
Some(
    BuiltIn(
        "flock",
    ),
)
